testdata/baselines/reference/submodule/conformance/moduleResolutionWithoutExtension8.errors.txt
/src/bar.cts(2,8): error TS2307: Cannot find module './foo' or its corresponding type declarations.


==== /src/bar.cts (1 errors) ====
    // Extensionless relative path dynamic import in a cjs module
    import("./foo").then(x => x); // should error, ask for extension
           ~~~~~~~
!!! error TS2307: Cannot find module './foo' or its corresponding type declarations.